--- a/src/linkedin_assets/assets/main.css
+++ b/src/linkedin_assets/assets/main.css
@@ -1,37 +1,12 @@
-body {
-    font-family: sans-serif;
-    font-size: 1.5rem;
+#login{
+    background-color: black;
+    color:white;
+    width: 400px;
+    height: 200px;
+    text-align: center;
+    padding-top: 20px;
 }
-
-img {
-    max-width: 50vw;
-    max-height: 25vw;
-    display: block;
-    margin: auto;
-}
-
-form {
-    display: flex;
-    justify-content: center;
-    gap: 0.5em;
-    flex-flow: row wrap;
-    max-width: 40vw;
-    margin: auto;
-    align-items: baseline;
-}
-
-button[type="submit"] {
-    padding: 5px 20px;
-    margin: 10px auto;
-    float: right;
-}
-
-#greeting {
-    margin: 10px auto;
-    padding: 10px 60px;
-    border: 1px solid #222;
-}
-
-#greeting:empty {
-    display: none;
+#login #condition{
+    margin-top:20px;
+    margin-bottom: 20px;
 }
